--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -741,8 +741,7 @@
 .doc .exampleblock > .content,
 .doc details.result > .content {
   background: var(--example-background);
-  border: 0.25rem solid var(--example-border-color);
-  border-radius: 0.5rem;
+  border: 1px solid var(--example-border-color);
   padding: 0.75rem;
 }
 
