--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,14 @@
   }
 }
 
+@media screen and (min-width: 1024px) {
+  .header {
+    max-width: var(--page-max-width);
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 body {
   padding-top: var(--navbar-height);
 }
@@ -15,8 +23,9 @@ body {
   height: var(--navbar-height);
   position: fixed;
   top: 0;
-  width: 100%;
+  width: var(--page-max-width);
   z-index: var(--z-index-navbar);
+  border-bottom: 2px solid var(--color-smoke-70);
 }
 
 .navbar a {
@@ -53,6 +62,13 @@ body {
 .navbar-brand .navbar-item.search {
   flex: auto;
   justify-content: flex-end;
+}
+
+.navbar-brand .navbar-item .navbar-logo {
+  display: block;
+  height: 2.5rem;
+  width: auto;
+  margin: 0 1rem 0 0;
 }
 
 #search-input {
