--- a/src/css/toolbar.css
+++ b/src/css/toolbar.css
@@ -2,14 +2,14 @@
   color: var(--toolbar-font-color);
   align-items: center;
   background-color: var(--toolbar-background);
-  box-shadow: 0 1px 0 var(--toolbar-border-color);
   display: flex;
   font-size: calc(15 / var(--rem-base) * 1rem);
   height: var(--toolbar-height);
   justify-content: flex-start;
-  position: sticky;
-  top: var(--navbar-height);
+  top: calc(var(--navbar-height) + 1rem);
   z-index: var(--z-index-toolbar);
+  margin-left: var(--doc-margin--desktop-sides);
+  margin-top: 1rem;
 }
 
 .toolbar a {
