--- a/src/partials/body.hbs
+++ b/src/partials/body.hbs
@@ -1,4 +1,7 @@
 <div class="body">
-{{> nav}}
-{{> main}}
+    {{> nav-explore}}
+    <div class="main-wrapper">
+        {{> nav}}
+        {{> main}}
+    </div>
 </div>
