--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -12,7 +12,6 @@
   font-size: calc(17 / var(--rem-base) * 1rem);
   z-index: var(--z-index-nav);
   visibility: hidden;
-  border-right: 2px solid var(--color-smoke-70);
 }
 
 @media screen and (min-width: 769px) {
@@ -36,7 +35,7 @@
 }
 
 .nav {
-  background: var(--nav-background);
+  background: var(--color-smoke-30);
   position: relative;
   top: var(--toolbar-height);
   height: var(--nav-height);
@@ -61,6 +60,15 @@
   color: inherit;
 }
 
+.single-page-item > a {
+  width: 100%;
+  display: inline-block;
+}
+
+.nav-item > .nav-toggle-row > a:hover {
+  text-decoration: none;
+}
+
 .nav .panels {
   display: flex;
   flex-direction: column;
@@ -73,20 +81,20 @@
   height: var(--nav-panel-menu-height);
 }
 
-.nav-panel-menu:not(.is-active) .nav-menu {
-  opacity: 0.75;
-}
+/*.nav-panel-menu:not(.is-active) .nav-menu {*/
+/*  opacity: 0.75;*/
+/*}*/
 
-.nav-panel-menu:not(.is-active)::after {
-  content: "";
-  background: rgb(207 224 226 / 17%);
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
+/*.nav-panel-menu:not(.is-active)::after {*/
+/*  content: "";*/
+/*  background: rgb(207 224 226 / 17%);*/
+/*  display: block;*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  right: 0;*/
+/*  bottom: 0;*/
+/*  left: 0;*/
+/*}*/
 
 .nav-menu {
   min-height: 100%;
@@ -137,7 +145,39 @@
 }
 
 .nav-item {
-  margin-top: 0.5em;
+  font-size: 14px;
+}
+
+.nav-toggle-row {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+button + .nav-link,
+button + .nav-text,
+.single-page-item {
+  padding: 9px;
+  left: 10px;
+  border-radius: 5px;
+}
+
+button + .nav-link:hover,
+button + .nav-text:hover,
+.single-page-item:hover {
+  background: var(--color-smoke-70);
+}
+
+.single-page-item.is-active {
+  background: var(--color-smoke-50);
+}
+
+span.single-page-item, a.single-page-item {
+  margin-bottom: 5px;
+}
+
+.nav-item:has(.nav-text) {
+  padding: 9px 0;
 }
 
 /* adds some breathing room below a nested list */
@@ -168,7 +208,13 @@
   margin-left: calc(var(--nav-line-height) * -1em);
 }
 
-.nav-item.is-active > .nav-item-toggle {
+.nav-item.is-active:not(:has(button)) {
+  padding: 9px;
+  background-color: var(--color-smoke-70);
+  border-radius: 4px;
+}
+
+.nav-item.is-active > .nav-toggle-row > .nav-item-toggle {
   transform: rotate(90deg);
 }
 
@@ -182,11 +228,7 @@
   font-weight: bold;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  border-bottom: 1px solid var(--color-smoke-70);
 }
 
 .nav-panel-explore:not(:first-child) {
@@ -199,13 +241,17 @@
   flex-shrink: 0;
   color: var(--nav-muted-color);
   box-shadow: 0 -1px 0 var(--nav-panel-divider-color);
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   line-height: 1;
   height: var(--drawer-height);
   flex-direction: column;
+}
+
+.nav-panel-explore .context:hover {
+  cursor: pointer;
 }
 
 .nav-panel-explore .context .exploring {
@@ -227,6 +273,7 @@
 .nav-panel-explore .context .version {
   display: flex;
   align-items: inherit;
+  margin-top: calc(-15 / var(--rem-base) * 1rem);
 }
 
 .nav-panel-explore .context .version::after {
@@ -240,8 +287,8 @@
   line-height: var(--doc-line-height);
   flex-grow: 1;
   box-shadow: inset 0 1px 5px var(--nav-panel-divider-color);
-  background: var(--nav-secondary-background);
-  padding: 0.5rem 0.75rem 0 0.75rem;
+  background: var(--color-white);
+  padding: 0;
   margin: 0;
   overflow-y: scroll;
   overscroll-behavior: none;
@@ -254,25 +301,22 @@
 }
 
 .nav-panel-explore .component {
-  display: block;
-}
-
-.nav-panel-explore .component + .component {
-  margin-top: 0.5rem;
-}
-
-.nav-panel-explore .component:last-child {
-  margin-bottom: 0.75rem;
+  display: flex;
+  padding: 6px 20px;
+  font-size: calc(15 / var(--rem-base) * 1rem);
+  border-bottom: 1px solid var(--color-smoke-70);
 }
 
 .nav-panel-explore .component .title {
+  color: var(--nav-heading-font-color);
   font-weight: var(--body-font-weight-bold);
 }
 
 .nav-panel-explore .versions {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 0;
+  padding-left: 5px;
+  padding-top: 1px;
   margin: -0.25rem -0.375rem 0 0.375rem;
   line-height: 1;
   list-style: none;
@@ -289,6 +333,8 @@
   white-space: nowrap;
   padding: 0.25em 0.5em;
   display: inherit;
+  font-size: 12px;
+  font-weight: 500;
 }
 
 .nav-panel-explore .component .is-current a {
