--- a/src/partials/main.hbs
+++ b/src/partials/main.hbs
@@ -1,11 +1,12 @@
 <main class="article">
-{{> toolbar}}
+  {{> nav-explore}}
+  {{> toolbar}}
   <div class="content">
-{{#if (eq page.layout '404')}}
-{{> article-404}}
-{{else}}
-{{> toc}}
-{{> article}}
-{{/if}}
+    {{#if (eq page.layout '404')}}
+      {{> article-404}}
+    {{else}}
+      {{> toc}}
+      {{> article}}
+    {{/if}}
   </div>
 </main>
