--- a/src/css/toc.css
+++ b/src/css/toc.css
@@ -4,8 +4,11 @@
 
 .toc.sidebar .toc-menu {
   margin-right: 0.75rem;
+  margin-top: 0.75rem;
   position: sticky;
   top: var(--toc-top);
+  background: #f5f5f5;
+  padding: 20px;
 }
 
 .toc .toc-menu h3 {
@@ -20,7 +23,6 @@
 .toc.sidebar .toc-menu h3 {
   display: flex;
   flex-direction: column;
-  height: 2.5rem;
   justify-content: flex-end;
 }
 
