--- a/src/partials/edit-this-page.hbs
+++ b/src/partials/edit-this-page.hbs
@@ -1,5 +1,5 @@
-{{#if (and page.fileUri (not env.CI))}}
-<div class="edit-this-page"><a href="{{page.fileUri}}">Edit this Page</a></div>
-{{else if (and page.editUrl (or env.FORCE_SHOW_EDIT_PAGE_LINK (not page.origin.private)))}}
-<div class="edit-this-page"><a href="{{page.editUrl}}">Edit this Page</a></div>
+{{#if (and page.editUrl (or env.FORCE_SHOW_EDIT_PAGE_LINK (not page.origin.private)))}}
+    <a class="edit-this-page" target="_blank" href="{{page.editUrl}}" title="Edit this page"><i data-feather="edit-3"></i></a>
+{{else if (and page.fileUri (not env.CI))}}
+  <a class="edit-this-page" target="_blank" href="{{page.fileUri}}" title="Edit this page"><i data-feather="edit-3"></i></a>
 {{/if}}
