--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -1,4 +1,5 @@
 <footer class="footer">
-  <p>This page was built using the Antora default UI.</p>
-  <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
+  <img src="{{uiRootPath}}/img/hartshorn.png" alt="Hartshorn Logo" class="footer-logo"/>
+  <p>Copyright &copy; 2019 - {{year}} Dockbox OSS (Guus Lieben)</p>
+  <p class="legal">All other trademarks and copyrights are property of their respective owners and are only mentioned for informative purposes. Other names may be trademarks of their respective owners.</p>
 </footer>
