--- a/src/css/toc.css
+++ b/src/css/toc.css
@@ -6,6 +6,8 @@
   margin-right: 0.75rem;
   position: sticky;
   top: var(--toc-top);
+  background: #f5f5f5;
+  padding: 20px;
 }
 
 .toc .toc-menu h3 {
@@ -20,7 +22,6 @@
 .toc.sidebar .toc-menu h3 {
   display: flex;
   flex-direction: column;
-  height: 2.5rem;
   justify-content: flex-end;
 }
 
