--- a/src/partials/toolbar.hbs
+++ b/src/partials/toolbar.hbs
@@ -6,7 +6,7 @@
     <div class="page-title">
         <h1 class="page">{{{or page.title 'Unknown page'}}} {{>edit-this-page}}</h1>
         <div class="page-metadata">
-            <i data-feather="user"></i> <span>{{{or page.author 'Unknown author(s)'}}}</span>
+            <i data-feather="user"></i> <span title="{{authors page.author false}}">{{{authors page.author}}}</span>
             <span class="separator">|</span>
             <i data-feather="layers"></i> <span>Version</span> {{> toolbar-versions}}
         </div>
